--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,18 @@
 /* App.css */
 .home-page {
-  background-image: url("./assets/home/background-home-mobile.jpg");
+  background-image: url("/assets/home/background-home-mobile.jpg");
 }
 
 .destination-page {
-  background-image: url("./assets/destination/background-destination-mobile.jpg");
+  background-image: url("/assets/destination/background-destination-mobile.jpg");
 }
 
 .technology-page {
-  background-image: url("./assets/technology/background-technology-mobile.jpg");
+  background-image: url("/assets/technology/background-technology-mobile.jpg");
 }
 
 .crew-page {
-  background-image: url("./assets/crew/background-crew-mobile.jpg");
+  background-image: url("/assets/crew/background-crew-mobile.jpg");
 }
 
 /* Base styles for all pages */
@@ -30,37 +30,37 @@
 
 @media (min-width: 768px) and (max-width: 991px) {
   .home-page {
-    background-image: url("./assets/home/background-home-tablet.jpg");
+    background-image: url("/assets/home/background-home-tablet.jpg");
     background-position-y: 50%;
   }
 
   .destination-page {
-    background-image: url("./assets/destination/background-destination-tablet.jpg");
+    background-image: url("/assets/destination/background-destination-tablet.jpg");
   }
 
   .technology-page {
-    background-image: url("./assets/technology/background-technology-tablet.jpg");
+    background-image: url("/assets/technology/background-technology-tablet.jpg");
   }
 
   .crew-page {
-    background-image: url("./assets/crew/background-crew-tablet.jpg");
+    background-image: url("/assets/crew/background-crew-tablet.jpg");
   }
 }
 
 @media (min-width: 992px) {
   .home-page {
-    background-image: url("./assets/home/background-home-desktop.jpg");
+    background-image: url("/assets/home/background-home-desktop.jpg");
   }
 
   .destination-page {
-    background-image: url("./assets/destination/background-destination-desktop.jpg");
+    background-image: url("/assets/destination/background-destination-desktop.jpg");
   }
 
   .technology-page {
-    background-image: url("./assets/technology/background-technology-desktop.jpg");
+    background-image: url("/assets/technology/background-technology-desktop.jpg");
   }
 
   .crew-page {
-    background-image: url("./assets/crew/background-crew-desktop.jpg");
+    background-image: url("/assets/crew/background-crew-desktop.jpg");
   }
 }
